--- a/Clicker/Clicker.WinForms.csproj
+++ b/Clicker/Clicker.WinForms.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Clicker.game\Clicker.Game.csproj" />
+    <ProjectReference Include="..\Clicker.Game\Clicker.Game.csproj" />
   </ItemGroup>
 
   <ItemGroup>
